project/stage/parse_tests/tests/reject/bad_var_decl/misplaced_semicolon.ul
void main() {
    void thisOneGood;float butNOTthis1 int meep;;
}
